register, login işlemleri gerçekleştirildi.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=kotlin-security
+
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=test
+spring.datasource.url=jdbc:postgresql://localhost:5432/kotlin-security-db
+spring.jpa.hibernate.ddl-auto=update
+
+
+server.port=8080
